--- a/web/llmvm-chat-studio/index.html
+++ b/web/llmvm-chat-studio/index.html
@@ -8,6 +8,8 @@
 
   <body>
     <div id="root"></div>
+    <!-- Runtime configuration -->
+    <script src="/config.js"></script>
     <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
     <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
